test_yaml/order_timeout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: tutorial
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: skcc32.azurecr.io/order:v7
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
