test_yaml/virtualservice_order.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-order-network-rule
  namespace: tutorial
spec:
  hosts:
  - order
  http:
  - route:
    - destination:
        host: order
    timeout: 3s
